--- a/movieDash/src/components/movieCard.module.css
+++ b/movieDash/src/components/movieCard.module.css
@@ -1,19 +1,16 @@
 .card {
-  background: #1f2937; /* cinza escuro */
   border-radius: 0.5rem;
-  padding: 0.7rem;
   color: white;
-  transition: transform 0.2s ease, box-shadow 0,3s ease;
+  transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
   position: relative;
   overflow: hidden;
 }
 
 .card:hover {
-  transform: translateY(-5px); /* Leve elevação em vez de aumentar a escala */
-  box-shadow: 0 0 15px rgba(239, 68, 68, 0.5); /* Brilho vermelho */
+  transform: translateY(-5px);
+  box-shadow: 0 0 15px rgba(239, 68, 68, 0.5);
 }
 
-/* cria o brilho */
 .card::after {
   content: '';
   position: absolute;
@@ -21,20 +18,14 @@
   left: 0;
   width: 100%;
   height: 100%;
-
-/* efeito metalico card */
-
-background: linear-gradient(
+  background: linear-gradient(
     45deg,
-    #FFFFFF00 50%,    /* Branco com 0% de opacidade */
-    #FFFFFF40 2%,    /* Branco com 25% de opacidade */
-    #FFFFFF00 70%     /* Branco com 0% de opacidade */
+    #FFFFFF00 50%,
+    #FFFFFF40 2%,
+    #FFFFFF00 70%
   );
-
   opacity: 0;
-
   transition: opacity 0.4s ease-in-out;
-  
   pointer-events: none;
 }
 
